--- a/services/backend/requirements.txt
+++ b/services/backend/requirements.txt
@@ -18,3 +18,13 @@ uvicorn==0.27.0
 python-dotenv==1.0.1
 psutil==5.9.8
 ffmpeg-python==0.2.0
+
+# Testing Requirements
+pytest==8.0.0
+pytest-asyncio==0.21.1  # Compatible with pytest 8.0.0
+pytest-cov==4.1.0
+pytest-mock==3.12.0
+pytest-timeout==2.2.0
+fakeredis==2.29.0
+mongomock==4.1.2
+moto==5.0.0
