Fix scaffolded test suite
Test Results

  - 93 of 98 tests passing (94.9%)
  - 5 integration tests failing - Expected, as they test API endpoints not yet implemented
  - 25% code coverage - Acceptable for current phase, needs improvement

  Issues Fixed

  1. Import errors - Fixed 3 test files with incorrect imports
  2. Docker configuration - Fixed command syntax in docker-compose.test.yml
  3. Missing model - Created VideoAnalysisJob model stub

  Technical Debt Tracked

  Added 9 new items to technical debt tracking:
  - High Priority: API endpoints, VideoAnalysisJob implementation, worker tasks (64h)
  - Medium Priority: Test coverage, authentication, E2E tests (72h)
  - Low Priority: Performance benchmarks, load testing, test factories (28h)

  Documentation Created

  - Test Report: /docs/testing/test-report-2025-07-16.md
  - Technical Debt: Updated in MongoDB with all findings
  - Project Status: Updated to show test infrastructure complete

  The test infrastructure is now fully operational and ready for continuous development. The failing integration tests are expected and will
   pass once the API endpoints are implemented.

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -75,13 +75,7 @@ services:
         echo 'Waiting for services to be ready...' &&
         sleep 5 &&
         echo 'Running tests with coverage...' &&
-        python -m pytest tests/ 
-          --cov=. 
-          --cov-report=html:/test-results/htmlcov 
-          --cov-report=xml:/test-results/coverage.xml 
-          --cov-report=term 
-          --junit-xml=/test-results/junit.xml 
-          -v
+        python -m pytest tests/ --cov=. --cov-report=html:/test-results/htmlcov --cov-report=xml:/test-results/coverage.xml --cov-report=term --junit-xml=/test-results/junit.xml -v
       "
     networks:
       - test-network
