refactor to use qdrant for rag
ore Changes

  - dev-knowledge-base/rag/dev_assistant.py - Modified for Qdrant
  - .gitignore - Updated with Qdrant paths

  New Documentation

  - QDRANT_MIGRATION_GUIDE.md - Complete migration guide
  - dev-knowledge-base-requirements.txt - Python dependencies

  New Scripts

  - scripts/start_qdrant.sh - Docker startup helper
  - scripts/setup_qdrant_env.sh - Python environment setup
  - scripts/migrate_to_qdrant.py - Migration utility
  - scripts/populate_qdrant_simple.py - Simple population
  - scripts/populate_modern_knowledge_base_qdrant.py - Full population
  - scripts/test_qdrant_connection.py - Connection tester

  Backup Files

  - dev-knowledge-base/rag/dev_assistant_chromadb_backup.py - Original version
  - dev-knowledge-base/rag/dev_assistant_qdrant.py - Reference implementation

--- a/.gitignore
+++ b/.gitignore
@@ -249,6 +249,8 @@ docker/volumes/
 *.db
 *.sqlite
 *.chromadb
+knowledge/chromadb/
+qdrant_storage/
 
 # PDFs (optional - uncomment if not using Git LFS)
 dev-knowledge-base/docs/pdfs/*.pdf
