Graph-RAG implementation for dev knowledge base
1. Cleaned Up Old System

  - Removed all ChromaDB references and old population scripts
  - Removed VideoCommentator references from code and documentation
  - Updated CLAUDE.md to remove legacy references

  2. Added Neo4j to Infrastructure

  - Updated docker-compose.yml with Neo4j service
  - Configured Neo4j with appropriate memory settings and plugins
  - Updated .env.example with Neo4j configuration

  3. Updated MongoDB Models

  - Added Graph-RAG fields to ProjectKnowledge model:
    - vector_db_id for Qdrant reference
    - graph_node_id for Neo4j reference
    - entities and relationships arrays
    - source_type enum for better categorization
  - Updated KnowledgeGraphNode model with Graph-RAG integration fields

  4. Created Unified Population Script

  - populate_knowledge_graph.py - Comprehensive script that:
    - Processes PDFs, GitHub repos, and internal docs
    - Extracts entities and relationships
    - Populates both Qdrant and Neo4j
    - Provides detailed statistics and error handling

  5. Implemented Graph-RAG Components

  - graph_rag_assistant.py - Main Graph-RAG implementation
    - Combines vector search with graph traversal
    - Provides enhanced context retrieval
    - Supports relationship exploration
  - graph_extractor.py - Entity and relationship extraction
    - Pattern-based extraction with SpaCy support
    - Domain-specific entity recognition

  6. Updated Dev CLI

  - Replaced ChromaDB commands with Qdrant/Graph-RAG commands
  - Added new commands:
    - info - Shows both vector and graph database stats
    - search - Enhanced search with Graph-RAG option
    - explore - Explore entity relationships in the graph
  - Fixed bugs in existing commands

  7. Documentation and Testing

  - Created comprehensive Graph-RAG setup guide
  - Added test script to verify all connections
  - Updated requirements.txt with new dependencies
  - Updated README with Graph-RAG information

  Files

--- a/.env.example
+++ b/.env.example
@@ -49,21 +49,22 @@ ELEVENLABS_API_KEY=sk_...your-elevenlabs-key-here
 # ====================
 # Vector Database Configuration
 # ====================
-# Vector database type: chromadb, milvus, or pinecone
-VECTOR_DB_TYPE=chromadb
+# Vector database type: qdrant
+VECTOR_DB_TYPE=qdrant
 
-# ChromaDB configuration (if using ChromaDB)
-CHROMA_HOST=localhost
-CHROMA_PORT=8000
+# Qdrant configuration
+QDRANT_URL=http://localhost:6333
+QDRANT_API_KEY=  # Optional for local development
+QDRANT_COLLECTION_NAME=video_intelligence_kb
 
-# Pinecone configuration (if using Pinecone)
-# Get from: https://www.pinecone.io/
-PINECONE_API_KEY=your-pinecone-key-here
-PINECONE_ENVIRONMENT=your-pinecone-environment
-
-# Milvus configuration (if using Milvus)
-MILVUS_HOST=localhost
-MILVUS_PORT=19530
+# ====================
+# Graph Database Configuration (Graph-RAG)
+# ====================
+# Neo4j configuration for knowledge graph
+NEO4J_URI=bolt://localhost:7687
+NEO4J_USER=neo4j
+NEO4J_PASSWORD=password123  # Change in production
+NEO4J_AUTH=neo4j/password123  # Format: user/password for Docker
 
 # ====================
 # Application Configuration
