--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,27 +33,48 @@ services:
       timeout: 5s
       retries: 5
 
-  # ChromaDB for local vector database
-  chromadb:
-    image: chromadb/chroma:latest
-    container_name: video-intelligence-chromadb
+  # Qdrant for vector database
+  qdrant:
+    image: qdrant/qdrant:latest
+    container_name: video-intelligence-qdrant
     restart: unless-stopped
     ports:
-      - "8000:8000"
+      - "6333:6333"
     volumes:
-      - chromadb_data:/chroma/chroma
+      - qdrant_data:/qdrant/storage
     environment:
-      - IS_PERSISTENT=TRUE
-      - PERSIST_DIRECTORY=/chroma/chroma
-      - ANONYMIZED_TELEMETRY=FALSE
+      - QDRANT__SERVICE__GRPC_PORT=6334
     networks:
       - video-intelligence-network
-    # Disabled health check for now - ChromaDB API endpoints vary by version
-    # healthcheck:
-    #   test: ["CMD", "curl", "-f", "http://localhost:8000/api/v1"]
-    #   interval: 10s
-    #   timeout: 5s
-    #   retries: 5
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:6333/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  # Neo4j for graph database (Graph-RAG)
+  neo4j:
+    image: neo4j:5-community
+    container_name: video-intelligence-neo4j
+    restart: unless-stopped
+    ports:
+      - "7474:7474"  # HTTP
+      - "7687:7687"  # Bolt
+    volumes:
+      - neo4j_data:/data
+      - neo4j_logs:/logs
+    environment:
+      - NEO4J_AUTH=${NEO4J_AUTH:-neo4j/password123}
+      - NEO4J_PLUGINS=["apoc", "graph-data-science"]
+      - NEO4J_dbms_memory_heap_initial__size=512m
+      - NEO4J_dbms_memory_heap_max__size=2G
+    networks:
+      - video-intelligence-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:7474"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   # FastAPI application
   api:
@@ -73,8 +94,10 @@ services:
       - REDIS_URL=redis://redis:6379
       - CELERY_BROKER_URL=redis://redis:6379/0
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
-      - CHROMA_HOST=chromadb
-      - CHROMA_PORT=8000
+      - QDRANT_URL=http://qdrant:6333
+      - NEO4J_URI=bolt://neo4j:7687
+      - NEO4J_USER=neo4j
+      - NEO4J_PASSWORD=${NEO4J_PASSWORD:-password123}
     volumes:
       - ./services/backend:/services/backend
     depends_on:
@@ -82,8 +105,10 @@ services:
         condition: service_healthy
       redis:
         condition: service_healthy
-      chromadb:
-        condition: service_started
+      qdrant:
+        condition: service_healthy
+      neo4j:
+        condition: service_healthy
     networks:
       - video-intelligence-network
     command: ["python", "-m", "uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8003", "--reload"]
@@ -104,8 +129,10 @@ services:
       - REDIS_URL=redis://redis:6379
       - CELERY_BROKER_URL=redis://redis:6379/0
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
-      - CHROMA_HOST=chromadb
-      - CHROMA_PORT=8000
+      - QDRANT_URL=http://qdrant:6333
+      - NEO4J_URI=bolt://neo4j:7687
+      - NEO4J_USER=neo4j
+      - NEO4J_PASSWORD=${NEO4J_PASSWORD:-password123}
       - CELERY_WORKER_CONCURRENCY=4
       - CELERY_WORKER_MAX_MEMORY_PER_CHILD=2048000
     volumes:
@@ -115,8 +142,10 @@ services:
         condition: service_healthy
       redis:
         condition: service_healthy
-      chromadb:
-        condition: service_started
+      qdrant:
+        condition: service_healthy
+      neo4j:
+        condition: service_healthy
     networks:
       - video-intelligence-network
     command: ["python", "-m", "celery", "-A", "celery_app", "worker", "--loglevel=info", "--concurrency=4", "--pool=threads"]
@@ -192,4 +221,6 @@ networks:
 
 volumes:
   mongodb_data:
-  chromadb_data:
+  qdrant_data:
+  neo4j_data:
+  neo4j_logs:
