--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,18 @@ python-dotenv==1.0.1
 psutil==5.9.8
 ffmpeg-python==0.2.0
 
+# Graph-RAG Requirements
+qdrant-client==1.7.3
+langchain-qdrant==0.1.0
+py2neo==2021.2.4
+PyPDF2==3.0.1
+GitPython==3.1.41
+aiofiles==23.2.1
+
+# NLP Requirements (optional, for enhanced entity extraction)
+# spacy==3.7.2
+# en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
+
 # Testing Requirements
 pytest==8.0.0
 pytest-asyncio==0.21.1  # Compatible with pytest 8.0.0
